--- a/index.html
+++ b/index.html
@@ -10,3 +10,15 @@
 						website template, you're free to use this website template without linking back to us. If you're having problems editing 
 						this website template, then don't hesitate to ask for help on the.</p>
 					</li>	
+</script>
+</head>
+<body>
+<div class="scanlines"></div>
+
+<!-- Begin Header -->
+<div class="header-wrapper opacity">
+	<div class="header">
+		<!-- Begin Logo -->
+		<div class="logo">
+		    <a href="index.html">
+				<img src="style/images/logo.png" alt="" />
