--- a/index.html
+++ b/index.html
@@ -22,3 +22,15 @@
 		<div class="logo">
 		    <a href="index.html">
 				<img src="style/images/logo.png" alt="" />
+                            	<li><a href="#">Subscription to the monthly newsletter</a></li>
+                                <li><a href="#">Free air fills and discounts at participating dive shops</a></li>
+                                <li><a href="#">Participation in raffles and drawings at Club events</a></li>
+                                <li>
+                                	<a href="#">Participating in annual contests:</a>
+                                    <ul>
+                                        <li><a href="#">Spear Fishing contest at Memorial Day</a></li>
+                                        <li><a href="#">Biggest Abalone</a></li>
+                                        <li><a href="#">Biggest Fish</a></li>
+                                        <li><a href="#">Photo Contest</a></li>
+                                        <li><a href="#">Cooking contests at Labor Day</a></li>
+                                    </ul>
