--- a/index.html
+++ b/index.html
@@ -34,3 +34,15 @@
                                         <li><a href="#">Photo Contest</a></li>
                                         <li><a href="#">Cooking contests at Labor Day</a></li>
                                     </ul>
+		<div class="footer">
+			<div>
+				<div>
+					<ul>
+						<li>
+							<a href="index.html">Home</a>
+						</li>
+						<li>
+							<a href="about.html">About</a>
+						</li>
+						<li>
+							<a href="blog.html">Blog</a>
